data/derived/comb/progs/unify/prog5014.ml.out
Characters 53-54:
  let c = x::x in
             ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
